config("myconfig") {
    include_dirs = [
        "./include",
    ]
    lib_dirs = ["./lib"]
    cflags_cc = [ "-std=c++2a" ]
}

executable("http_data_tunnel_server") {
    configs += [ ":myconfig" ]
    configs -= [ "//build/config:c++11" ]

    sources = [
        "./server/main.cpp",
        "./server/http_data_tunnel_server.h",
        "./server/http_data_tunnel_server.cpp",
        "./server/kconfig.cpp",
        "./server/kconfig.h",
        "./server/logger.cpp",
        "./server/logger.h",
        ]
    libs = ["boost_log_setup", "boost_log", "boost_date_time", "boost_filesystem", "boost_thread",
            "boost_program_options", "boost_regex", "pthread"]
}

executable("http_data_tunnel_client") {
    configs += [ ":myconfig" ]
    configs -= [ "//build/config:c++11" ]

    sources = [
        "./client/main_http.cpp",
        "./client/http_data_tunnel_client.h",
        "./client/http_data_tunnel_client.cpp",
        "./client/pub.h",
        "./client/pub.cpp",
        ]
    libs = ["pthread"]
}




